# c-_course_2025

big_integer/: big_integer.cpp  big_integer.hpp
ct_game/: ct_game.hpp
geometry/: geometry.cpp  geometry.hpp
list/: list.hpp
matrix/: matrix.hpp
smart_pointers/: smart_pointers.hpp
testting-repo-cpp-cs-2024-2025/: .main_ci.yml  banned_words_checker.py  test.sh  valgrind_parser.py
testting-repo-cpp-cs-2024-2025/array/: .clang-tidy  CMakeLists.txt  IteratorTests.hpp  banned_words.json  stress.cpp  test.sh  tests.cpp
testting-repo-cpp-cs-2024-2025/big_integer/: CMakeLists.txt  test.sh  tests.cpp
testting-repo-cpp-cs-2024-2025/calculator/: .clang-tidy  CMakeLists.txt  README.md  test.sh  tests.cpp
testting-repo-cpp-cs-2024-2025/json/: CMakeLists.txt  banned_words.json  extra_stress_test.cpp  stress_test.cpp  stress_utils.hpp  test.sh  tests.cpp  utils.hpp
testting-repo-cpp-cs-2024-2025/json/testdata/: ComplexTypesCompositionMapMap.json  ComplexTypesCompositionMapOptional1.json  ComplexTypesCompositionMapOptional2.json  ComplexTypesCompositionMapTuple1.json  ComplexTypesCompositionMapTuple2.json  ComplexTypesCompositionMapVariant1.json  ComplexTypesCompositionMapVariant2.json  ComplexTypesCompositionVectorMap1.json  ComplexTypesCompositionVectorMap2.json  ComplexTypesMapInt.json  ComplexTypesMapString.json  ExtraStressVeryLarge.json  PODBasic.json  PODComplex.json  PODComplexCompound.json  PODCompound.json  PODOptional1.json  PODOptional2.json  PODOptional3.json  PODOptional4.json  PODOptional5.json  StressExtraLong.json  StressLarge.json
(+48 files in other folders)
